--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+*.DS_Store
+
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,swift,swiftpackagemanager
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,swift,swiftpackagemanager
 
